# stringpy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  stringpy.rc.in
.github/workflows/: codeql.yml  linux.yml  windows.yml
cmake/: ClangFormat.cmake  Config.cmake.in  Coverage.cmake  Doxygen.cmake  GoogleTest.cmake  Install.cmake
docs/: doxygen-header.html
examples/: .cppcheck_suppressions  CMakeLists.txt
examples/cmake/: ClangTidy.cmake  CompileOptions.cmake  CompileOptionsLinux.cmake  CompileOptionsLinuxClang.cmake  CompileOptionsLinuxGNU.cmake  CompileOptionsWindows.cmake  CompileOptionsWindowsClang.cmake  CompileOptionsWindowsMSVC.cmake  Cppcheck.cmake  Iwyu.cmake  PvsStudio.cmake
examples/src/: capitalize.cpp  center.cpp  count.cpp  ctype.cpp  endswith.cpp  equal.cpp  expandtabs.cpp  find.cpp  format.cpp  join.cpp  just.cpp  partition.cpp  replace.cpp  split.cpp  splitlines.cpp  startswith.cpp  strip.cpp  stype.cpp  swapcase.cpp  title.cpp  translate.cpp
include/stringpy/: capitalize.hpp  center.hpp  const.hpp  count.hpp  ctype.hpp  endswith.hpp  equal.hpp  expandtabs.hpp  find.hpp  format.hpp  join.hpp  just.hpp  partition.hpp  replace.hpp  split.hpp  splitlines.hpp  startswith.hpp  stringpy.hpp  strip.hpp  stype.hpp  swapcase.hpp  title.hpp  translate.hpp
src/: capitalize.cpp  center.cpp  count.cpp  endswith.cpp  equal.cpp  expandtabs.cpp  find.cpp  format.cpp  just.cpp  partition.cpp  replace.cpp  split.cpp  splitlines.cpp  startswith.cpp  stype.cpp  swapcase.cpp  title.cpp  translate.cpp
tests/: CMakeLists.txt
tests/src/: capitalize.cpp  center.cpp  count.cpp  ctype.cpp  endswith.cpp  equal.cpp  expandtabs.cpp  find.cpp  format.cpp  join.cpp  just.cpp  partition.cpp  replace.cpp  split.cpp  splitlines.cpp  startswith.cpp  strip.cpp  stype.cpp  swapcase.cpp  title.cpp  translate.cpp
